syntax = "proto3";
import "PersonComment.proto";
option java_multiple_files = true;
package ru.protei.grpc;

service SingleCommentService {
  rpc getPerson(PersonRequest) returns (PersonResponse);
}